Add styling to login page

--- a/src/styles.css
+++ b/src/styles.css
@@ -86,3 +86,13 @@
 {
     grid-area: upd-btn;
 }
+
+
+.login-container
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 5rem;
+}
