--- a/src/styles.css
+++ b/src/styles.css
@@ -96,3 +96,12 @@
     justify-content: center;
     margin-top: 5rem;
 }
+
+.event_filters
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 1rem;
+}
