--- a/src/styles.css
+++ b/src/styles.css
@@ -97,7 +97,7 @@
     margin-top: 5rem;
 }
 
-.event-filters, .order-actions
+.event-filters, .order-sort
 {
     display: flex;
     flex-direction: row;
